Translate the help text into Russian, as well as make some corrections

--- a/po/ru.po
+++ b/po/ru.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: trader 7.3\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2012-03-15 09:02+1100\n"
-"PO-Revision-Date: 2012-03-15 14:13+1100\n"
+"PO-Revision-Date: 2012-03-16 10:01+1100\n"
 "Last-Translator: John Zaitseff <J.Zaitseff@zap.org.au>\n"
 "Language-Team: Russian\n"
 "Language: ru\n"
@@ -399,7 +399,7 @@ msgstr "Игрок: ^{%ls^}"
 #: src/game.c:648
 #, c-format
 msgid "  Turn: ^{%d^}  "
-msgstr "  Ход: ^{%d^}-й  "
+msgstr "  Ход: ^{%d-й^}  "
 
 #: src/game.c:649
 msgid "  ^[*** Last Turn ***^]  "
@@ -577,7 +577,7 @@ msgstr "  Арбитражный суд  "
 #: src/move.c:676
 #, c-format
 msgid "%ls has been declared bankrupt by the Interstellar Trading Bank."
-msgstr "Межзвёздный торговой банк объявляет, что игрок %ls обанкротился."
+msgstr "Межзвёздный торговый банк объявляет, что игрок %ls обанкротился."
 
 #. TRANSLATORS: %ls is the name of the player that has
 #. declared themselves bankrupt.
@@ -851,7 +851,7 @@ msgstr "Сколько Вы хотите вернуть? "
 #: src/exch.c:579
 #, c-format
 msgid "  Stock Transaction in %ls  "
-msgstr "  Биржевая операция в фирме %ls  "
+msgstr "  Биржевые операции в фирме %ls  "
 
 #. TRANSLATORS: "Shares issued" represents the number of
 #. shares already sold by the company to all players.
@@ -937,7 +937,7 @@ msgstr "  Акции не доступны  "
 
 #: src/exch.c:713
 msgid "No more shares are available for purchase."
-msgstr "Нет осталось больше акций для покупки."
+msgstr "Не осталось больше акций для покупки."
 
 #: src/exch.c:717
 msgid "  Insufficient Cash  "
@@ -948,7 +948,7 @@ msgid ""
 "You do not have enough cash\n"
 "to purchase additional shares."
 msgstr ""
-"У Вас нет достаточно денег, чтобы\n"
+"У Вас недостаточно наличных денег, чтобы\n"
 "приобрести дополнительные акции."
 
 #: src/exch.c:729
@@ -1212,6 +1212,22 @@ msgid ""
 "        ^e ~. ~. ~. ~. ~. ~. ~. ^s~*^e ~. ^N\n"
 "        ^e ~. ~. ~. ~. ^s~*^e ~. ~. ~. ~. ^N\n"
 msgstr ""
+"^B«Звёздные торговцы»^N  ―  это  простая  игра  межзвёздной торговли.  Цель игры\n"
+"состоится  в том,  чтобы стать  самым  богатым  игроком - победителем.   Это\n"
+"делается  путём создания межзвёздных  судоходных маршрутов,  расширения этих\n"
+"маршрутов, и  покупки и  продажи акций соответствующих  акционерных обществ.\n"
+"Кроме того, возврат на каждую  акцию (в процентах) изменяется.  Игроки также\n"
+"могут  занять  денги у  Межзвёздного  торгового  банка, чтобы  финансировать\n"
+"дополнительные покупки на фондовой бирже.\n"
+"\n"
+"Карта галактики представлена сеткой размером ^B~x^N на ^B~y^N.  Типичная часть карты\n"
+"может быть:\n"
+"\n"
+"        ^e ~. ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
+"        ^e ~. ~. ~. ~. ~. ~. ~. ~. ~. ^N        ^e ~. ^N обозначает ^Bпустое пространство^N,\n"
+"        ^e ~. ^s~*^e ~. ~. ~. ~. ~. ~. ~. ^N        ^s ~* ^N обозначает ^Bзвезду^N.\n"
+"        ^e ~. ~. ~. ~. ~. ~. ~. ^s~*^e ~. ^N\n"
+"        ^e ~. ~. ~. ~. ^s~*^e ~. ~. ~. ~. ^N\n"
 
 #: src/help.c:122
 msgid ""
@@ -1231,6 +1247,22 @@ msgid ""
 "will set up  an ^Boutpost^N,  not belonging  to any company.  Thus, if move ^k~3^N is\n"
 "selected on the above map, a ^o ~+ ^N would be placed at that position.\n"
 msgstr ""
+"Компьютер выбирает ^B~m^N заходов наугад (обозначенные от ^k~1^N до ^k~M^N)  и помещает их\n"
+"на карте.  Для выбора любого из выделенных позиций, нажмите на соответствую-\n"
+"щую букву.  Например, некоторые из заходов на карте могут быть:\n"
+"\n"
+"\n"
+"        ^e ^k~1^e ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
+"        ^e ~. ~. ~. ^k~3^e ~. ~. ~. ~. ~. ^N\n"
+"        ^e ~. ^s~*^e ~. ~. ~. ~. ^k~5^e ~. ~. ^N        Показаны заходы от ^k~1^N до ^k~5^N.\n"
+"        ^e ~. ^k~2^e ~. ~. ^k~4^e ~. ~. ^s~*^e ~. ^N\n"
+"        ^e ~. ~. ~. ~. ^s~*^e ~. ~. ~. ~. ^N\n"
+"\n"
+"\n"
+"Избрание позиции, что ^Bне рядом^N со звездой (как, например, заходы ^k~1^N, ^k~3^N или ^k~5^N)\n"
+"создаст  ^Bфорпост^N  не принадлежащий  к какой-либо  компании.  Таким  образом,\n"
+"избрание захода ^k~3^N на выше-указанной карте создаст форпост, обозначено симво-\n"
+"лом ^o ~+ ^N.\n"
 
 #: src/help.c:140
 msgid ""
@@ -1250,6 +1282,22 @@ msgid ""
 "        ^e ~. ^k~2^e ~. ~. ^k~4^e ~. ~. ^s~*^e ^c~B^e ^N\n"
 "        ^e ~. ~. ~. ~. ^s~*^e ~. ~. ~. ^k~8^e ^N\n"
 msgstr ""
+"Если избрать позицию рядом со звездой (или рядом с форпостом), будет сформи-\n"
+"ровано  новое торговое предприятие,  и код этой новой фирмы  явится на карте\n"
+"галактики.  В качестве награды за создание компании, Вы получите первые пять\n"
+"акций.  До ^B~c-и^N компаний могут быть созданы таким образом.\n"
+"\n"
+"Если, наоборот,  избрать позицию рядом с уже-существующей  компанией, эта же\n"
+"фирма расширит свою деятельность  на одну клетку.  Это увеличивает стоимость\n"
+"её  акций и,  следовательно,  Вашего возвращения.   Таким образом,  избрание\n"
+"захода ^k~6^N или ^k~8^N  на ниже-указанной карте расширяет судоходные маршруты компа-\n"
+"нии ^B~B^N:\n"
+"\n"
+"        ^e ^k~1^e ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
+"        ^e ~. ~. ~. ^o~+^e ~. ~. ^k~6^e ~. ~. ^N\n"
+"        ^e ~. ^s~*^e ~. ~. ~. ~. ^c~B^e ^c~B^e ^c~B^e ^N        Заход ^k~6^N или ^k~8^N расширяет фирму ^B~B^N.\n"
+"        ^e ~. ^k~2^e ~. ~. ^k~4^e ~. ~. ^s~*^e ^c~B^e ^N\n"
+"        ^e ~. ~. ~. ~. ^s~*^e ~. ~. ~. ^k~8^e ^N\n"
 
 #: src/help.c:158
 msgid ""
@@ -1269,6 +1317,21 @@ msgid ""
 "more valuable:  the company's share price  will increase by a greater amount\n"
 "than it would for outposts not next to stars.\n"
 msgstr ""
+"Избрание позиции рядом со звездой увеличивает стоимость Ваших акций примерно\n"
+"в пять раз больше,  чем расширение фирмы клеткой не рядом со звездой.  Таким\n"
+"образом, заходу ^k~6^N следует отдать предпочтение, чем заходу ^k~8^N.\n"
+"\n"
+"        ^e ^c~C^e ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
+"        ^e ^k~1^e ^o~+^e ~. ^o~+^e ~. ~. ^k~6^e ~. ~. ^N\n"
+"        ^e ~. ^s~*^e ~. ~. ~. ~. ^c~B^e ^c~B^e ^c~B^e ^N        Заход ^k~6^N предпочтительней захода ^k~8^N.\n"
+"        ^e ~. ^k~2^e ~. ~. ^k~4^e ~. ~. ^s~*^e ^c~B^e ^N\n"
+"        ^e ~. ~. ~. ~. ^s~*^e ~. ~. ~. ^k~8^e ^N\n"
+"\n"
+"Вы также можете расширить любую  компанию, избрав позицию рядом с форпостом.\n"
+"Такие форпосты будут поглощены этой фирмой.  Таким образом, заход ^k~1^N расширит\n"
+"судоходные маршруты компании ^B~C^N  на ^Bдве^N клетки.  Притом, поглощение форпостов\n"
+"около звёзд  имеет  большую ценность:  цена акций  фирмы  поднимется гораздо\n"
+"больше, чем поглощение форпостов не рядом звёзд.\n"
 
 #: src/help.c:176
 msgid ""
@@ -1289,6 +1352,22 @@ msgid ""
 "proportional to the amount  owned in the old company.  As well, a cash bonus\n"
 "is also paid, proportional to the percentage of the old company owned.\n"
 msgstr ""
+"Если две фирмы  разделяются на карте только одной  клеткой, то избрания этой\n"
+"клетки  (если есть такая возможность)  ^Bобъединяет^N эти фирмы в одну компанию.\n"
+"Например, избрание захода ^k~5^N  на ниже-указанной карте объединит  компании ^B~A^N и\n"
+"^B~B^N.   В таком  случае, фирма  с большей  общей  стоимостью поглощает  вторую.\n"
+"Здесь, например, компания ^B~B^N может быть поглотит компанию ^B~A^N.  Фирма ^B~A^N прекра-\n"
+"щает  своё существование,  хотя она может  появиться позднее  как совершенно\n"
+"новое акционерное общество в будущей части игры.\n"
+"\n"
+"        ^e ^k~1^e ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
+"        ^e ~. ~. ~. ^c~A^e ^c~A^e ^k~5^e ^c~B^e ~. ~. ^N        Заход ^k~5^N сливает компании ^B~A^N и ^B~B^N.\n"
+"        ^e ~. ^s~*^e ~. ~. ^c~A^e ~. ^c~B^e ^c~B^e ^c~B^e ^N\n"
+"        ^e ~. ^k~2^e ~. ~. ~. ~. ~. ^s~*^e ^c~B^e ^N\n"
+"\n"
+"При слиянии компаний, игрокам выдаются акции в доминирующей фирме пропорцио-\n"
+"нально владением акций в поглощённом предприятии.  Кроме того, выплачивается\n"
+"бонус, пропорционально владению старой компании.\n"
 
 #: src/help.c:195
 msgid ""
@@ -1309,22 +1388,38 @@ msgid ""
 "The ^Bwinner of the game^N  is the person  with the greatest  net  worth  (total\n"
 "value of cash, stock and debt).  ^HGood luck^N and may the best person win!\n"
 msgstr ""
+"После выбора захода, Вы входите  в ^BМежзвёздную фондовую биржу^N.  Здесь можете\n"
+"приобретать акции, продавать их, занимать деньги у торгового банка или пога-\n"
+"шать  часть своего долга  (если применимо).   Обратите внимание,  что каждая\n"
+"компания выпускает ограниченное количество акций ― нельзя  просто бесконечно\n"
+"покупать!   Однако же, можно  предлагать фирме  выпустить новых  акций.  Чем\n"
+"больше Ваше владение в компании, тем больше шансов успеха на выдачу акций.\n"
+"\n"
+"Игра  обычно заканчивается  после  ^B~t^N ходов.  Однако,  можно  закончить игру\n"
+"раньше, нажав ^K<CTRL><C>^N вместо избрание захода.  Кроме того, отдельные игро-\n"
+"ки могут объявить себя банкротом  в любой момент.   Если Ваш долг достаточно\n"
+"велик, банк  может сделать  это за Вас!   Если  не хватает времени закончить\n"
+"игру, можете сохранить её и продолжить позже.\n"
+"\n"
+"^BПобедителем игры^N является игрок  с самой большой  общей стоимостью, то есть,\n"
+"общая сумма  наличных денег, акций и  долга.  ^HУдачи Вам^N ― да победит  лучший\n"
+"игрок!\n"
 
 #: src/help.c:215
 msgid "@ Help text, page 7"
-msgstr ""
+msgstr "@"
 
 #: src/help.c:216
 msgid "@ Help text, page 8"
-msgstr ""
+msgstr "@"
 
 #: src/help.c:217
 msgid "@ Help text, page 9"
-msgstr ""
+msgstr "@"
 
 #: src/help.c:218
 msgid "@ Help text, page 10"
-msgstr ""
+msgstr "@"
 
 #: src/help.c:270
 msgid "  How to Play  "
@@ -1365,7 +1460,7 @@ msgstr "%s: символ имеет неверную ширину: «%lc»"
 #: src/intf.c:434
 #, c-format
 msgid "terminal size is too small (%d x %d required)"
-msgstr "размеры терминала слишком малы (нужны %d x %d)"
+msgstr "размеры терминала слишком малы (нужны %d на %d)"
 
 #: src/intf.c:610
 msgid "Star Traders"
