--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,13 @@ consult the Subversion repository for "trader" on The ZAP Group web server
 at http://www.zap.org.au/services/svn/.
 
 
+Version 7.4 (not yet released)
+------------------------------
+
+@@@ Updated Russian translation; thanks to Vladimir B. Tsarkov.
+@@@ French translation; thanks to Frédéric Marchal.
+
+
 Version 7.3 (16th March, 2012)
 ------------------------------
 
