Prepare for a preliminary release of Star Traders
This preliminary release, version 7.4-pre1, allows translators time to
make changes before the real release of 7.4.

--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,7 @@ at http://www.zap.org.au/services/svn/.
 Version 7.4 (not yet released)
 ------------------------------
 
+@@@ Revised game algorithms: negative returns now allowed.
 @@@ Updated Russian translation; thanks to Vladimir B. Tsarkov.
 @@@ French translation; thanks to Frédéric Marchal.
 
