Temporarily revert changes: from "вы" back to "Вы"
The "Вы" used is the polite singular, not the grammatical plural, so
traditionally is written capitalised.

--- a/po/ru.po
+++ b/po/ru.po
@@ -18,7 +18,7 @@ msgstr ""
 "Project-Id-Version: trader 7.4-pre1\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2012-03-28 18:12+1100\n"
-"PO-Revision-Date: 2012-03-29 06:30+1100\n"
+"PO-Revision-Date: 2012-03-29 06:53+1100\n"
 "Last-Translator: Pavel Maryanov <acid@jack.kiev.ua>\n"
 "Language-Team: Russian <gnu@mx.ru>\n"
 "Language: ru\n"
@@ -784,7 +784,7 @@ msgstr ""
 "Ваш долг составляет %N!\n"
 "\n"
 "^{Межзвёздный торговый банк конфисковал^}\n"
-"%N^{ из ваших наличных денег.^}"
+"%N^{ из Ваших наличных денег.^}"
 
 #: src/exch.c:98
 #, c-format
@@ -888,12 +888,12 @@ msgstr "  Недостаточный предел кредита  "
 #: src/exch.c:425
 #, c-format
 msgid "The Bank will not lend you any more money."
-msgstr "Банк не готов предоставлять вам больше денег."
+msgstr "Банк не готов предоставлять Вам больше денег."
 
 #: src/exch.c:445
 #, c-format
 msgid "How much do you wish to borrow? "
-msgstr "Сколько вы хотите взять в кредит? "
+msgstr "Сколько Вы хотите взять в кредит? "
 
 #: src/exch.c:477
 #, c-format
@@ -903,7 +903,7 @@ msgstr "  Нет долга  "
 #: src/exch.c:478
 #, c-format
 msgid "You have no debt to repay."
-msgstr "У вас нет долга для погашения."
+msgstr "У Вас нет долга для погашения."
 
 #: src/exch.c:482
 #, c-format
@@ -913,12 +913,12 @@ msgstr "  Нет наличных  "
 #: src/exch.c:483
 #, c-format
 msgid "You have no cash with which to repay the debt!"
-msgstr "У вас нет наличных для погашения долга!"
+msgstr "У Вас нет наличных для погашения долга!"
 
 #: src/exch.c:503
 #, c-format
 msgid "How much do you wish to repay? "
-msgstr "Сколько вы хотите вернуть? "
+msgstr "Сколько Вы хотите вернуть? "
 
 #. TRANSLATORS: %ls represents the company name.
 #: src/exch.c:579
@@ -1037,7 +1037,7 @@ msgid ""
 "You do not have enough cash\n"
 "to purchase additional shares."
 msgstr ""
-"У вас недостаточно наличных денег, чтобы\n"
+"У Вас недостаточно наличных денег, чтобы\n"
 "приобрести дополнительные акции."
 
 #: src/exch.c:729
@@ -1051,7 +1051,7 @@ msgstr[2] "Вы можете приобрести до ^{%'ld^} акций."
 #: src/exch.c:735
 #, c-format
 msgid "How many shares do you wish to purchase? "
-msgstr "Сколько акций вы хотите приобрести? "
+msgstr "Сколько акций Вы хотите приобрести? "
 
 #: src/exch.c:756
 #, c-format
@@ -1061,7 +1061,7 @@ msgstr "  Нет акций  "
 #: src/exch.c:757
 #, c-format
 msgid "You do not have any shares to sell."
-msgstr "У вас нет ни одной акции для продажи."
+msgstr "У Вас нет ни одной акции для продажи."
 
 #: src/exch.c:764
 #, c-format
@@ -1074,7 +1074,7 @@ msgstr[2] "Вы можете продать до ^{%'ld^} акций."
 #: src/exch.c:770
 #, c-format
 msgid "How many shares do you wish to sell? "
-msgstr "Сколько акций вы хотите продать? "
+msgstr "Сколько акций Вы хотите продать? "
 
 #: src/exch.c:798
 #, c-format
@@ -1381,12 +1381,12 @@ msgid ""
 msgstr ""
 "При выборе позиции  рядом со звездой (или рядом с форпостом),  будет сформи-\n"
 "ровано ^Bновое торговое предприятие^N,  и код этой новой фирмы появится на карте\n"
-"галактики.  В качестве награды за создание компании, вы получите первые пять\n"
+"галактики.  В качестве награды за создание компании, Вы получите первые пять\n"
 "акций.  До ^B~c-и^N компаний могут быть созданы таким образом.\n"
 "\n"
 "При выборе позиции рядом с уже существующей компанией, эта компания расширит\n"
 "свою деятельность  на одну  клетку.  Это увеличивает  стоимость её  акций и,\n"
-"следовательно, вашего дохода.  Таким образом,  выбор позиции ^k~6^N или ^k~8^N на ука-\n"
+"следовательно, Вашего дохода.  Таким образом,  выбор позиции ^k~6^N или ^k~8^N на ука-\n"
 "занной ниже карте расширяет маршруты компании ^B~B^N:\n"
 "\n"
 "        ^e ^k~1^e ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
@@ -1413,7 +1413,7 @@ msgid ""
 "more valuable:  the company's share price  will increase by a greater amount\n"
 "than it would for outposts not next to stars.\n"
 msgstr ""
-"Выбор позиции рядом со звездой  увеличивает стоимость ваших акций примерно в\n"
+"Выбор позиции рядом со звездой  увеличивает стоимость Ваших акций примерно в\n"
 "пять  раз, по сравнению  с расширением  фирмы клеткой  не рядом  со звездой.\n"
 "Таким образом, позиция ^k~6^N является более предпочтительной, чем позиция ^k~8^N.\n"
 "\n"
@@ -1484,21 +1484,21 @@ msgid ""
 "The ^Bwinner of the game^N  is the person  with the greatest  net  worth  (total\n"
 "value of cash, stock and debt).  ^HGood luck^N and may the best person win!\n"
 msgstr ""
-"После выбора позиции, вы оказываетесь на  ^BМежзвёздной фондовой бирже^N.  Здесь\n"
-"вы можете приобретать акции, продавать их, занимать деньги у торгового банка\n"
+"После выбора позиции, Вы оказываетесь на  ^BМежзвёздной фондовой бирже^N.  Здесь\n"
+"Вы можете приобретать акции, продавать их, занимать деньги у торгового банка\n"
 "или погашать  часть своего долга  (если применимо).  Обратите  внимание, что\n"
 "каждая компания выпускает ограниченное количество акций ― нельзя просто бес-\n"
 "конечно покупать!   Однако,  можно предлагать фирме выпустить  больше акций.\n"
-"Чем больше ваше владение в фирме, тем больше шансов получить больше акций.\n"
+"Чем больше Ваше владение в фирме, тем больше шансов получить больше акций.\n"
 "\n"
 "Игра обычно заканчивается  после ^B~t-и^N ходов.  Однако,  можно  закончить игру\n"
 "раньше, нажав ^K<CTRL><C>^N вместо выбора позиции.  Кроме того, отдельные игроки\n"
-"могут  объявить себя  банкротом  в любой момент.   Если ваш  долг достаточно\n"
-"велик, банк  может сделать  это за вас!   Если не хватает  времени закончить\n"
-"игру, вы можете сохранить её и продолжить позже.\n"
+"могут  объявить себя  банкротом  в любой момент.   Если Ваш  долг достаточно\n"
+"велик, банк  может сделать  это за Вас!   Если не хватает  времени закончить\n"
+"игру, Вы можете сохранить её и продолжить позже.\n"
 "\n"
 "^BПобедителем игры^N  является игрок с самой большой  нетто-стоимостью, то есть,\n"
-"разностью между активами (наличные деньги + акции) и долгом.  ^HУдачи вам^N ― да\n"
+"разностью между активами (наличные деньги + акции) и долгом.  ^HУдачи Вам^N ― да\n"
 "победит лучший игрок!\n"
 
 #: src/help.c:215
