--- a/po/ru.po
+++ b/po/ru.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.4-pre1\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
-"POT-Creation-Date: 2012-03-28 18:12+1100\n"
+"POT-Creation-Date: 2012-03-29 07:37+1100\n"
 "PO-Revision-Date: 2012-03-29 06:53+1100\n"
 "Last-Translator: Pavel Maryanov <acid@jack.kiev.ua>\n"
 "Language-Team: Russian <gnu@mx.ru>\n"
@@ -1522,7 +1522,11 @@ msgstr "@\n"
 msgid "  How to Play  "
 msgstr "  Как играть в «Звёздные торговцы»  "
 
-#: src/help.c:272
+#. TRANSLATORS: The first %d is the current page number,
+#. the second is the number of pages your help text takes
+#. (6, in English).  You can replace the second %d with a
+#. fixed word, if you like.
+#: src/help.c:276
 #, c-format
 msgid "Page %d of %d"
 msgstr "Страница №%d из %d-и"
@@ -1530,7 +1534,7 @@ msgstr "Страница №%d из %d-и"
 #. TRANSLATORS: The reason the user is not asked "Press any
 #. key to continue" is historical: many, many people used to
 #. ask "where is the <ANY> key?" :-)
-#: src/help.c:473 src/intf.c:3035
+#: src/help.c:477 src/intf.c:3035
 #, c-format
 msgid "[ Press <SPACE> to continue ] "
 msgstr "[ Нажмите <ПРОБЕЛ> для продолжения ] "
@@ -1541,7 +1545,7 @@ msgstr "[ Нажмите <ПРОБЕЛ> для продолжения ] "
 #. <BACKSPACE>, and almost any other key instead of
 #. <SPACE> (other than <ESC>, <CANCEL>, <EXIT>, <CTRL><C>,
 #. <CTRL><G> or <CTRL><\>).
-#: src/help.c:480
+#: src/help.c:484
 #, c-format
 msgid "[ Press <SPACE> to continue or <BACKSPACE> for the previous page ] "
 msgstr "[ Нажмите <ПРОБЕЛ> для продолжения; <←> — вернуться на пред. страницу ] "
