--- a/po/fr.po
+++ b/po/fr.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.4-pre1\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
-"POT-Creation-Date: 2012-03-28 18:12+1100\n"
+"POT-Creation-Date: 2012-03-29 07:37+1100\n"
 "PO-Revision-Date: 2012-03-28 18:21+1100\n"
 "Last-Translator: Frédéric Marchal <fmarchal@perso.be>\n"
 "Language-Team: French <traduc@traduc.org>\n"
@@ -1523,7 +1523,11 @@ msgstr "@ Texte d'aide, page 10\n"
 msgid "  How to Play  "
 msgstr "  Comment jouer  "
 
-#: src/help.c:272
+#. TRANSLATORS: The first %d is the current page number,
+#. the second is the number of pages your help text takes
+#. (6, in English).  You can replace the second %d with a
+#. fixed word, if you like.
+#: src/help.c:276
 #, c-format
 msgid "Page %d of %d"
 msgstr "Page %d sur %d"
@@ -1531,7 +1535,7 @@ msgstr "Page %d sur %d"
 #. TRANSLATORS: The reason the user is not asked "Press any
 #. key to continue" is historical: many, many people used to
 #. ask "where is the <ANY> key?" :-)
-#: src/help.c:473 src/intf.c:3035
+#: src/help.c:477 src/intf.c:3035
 #, c-format
 msgid "[ Press <SPACE> to continue ] "
 msgstr "[ Appuyez <ESPACE> pour continuer ] "
@@ -1542,7 +1546,7 @@ msgstr "[ Appuyez <ESPACE> pour continuer ] "
 #. <BACKSPACE>, and almost any other key instead of
 #. <SPACE> (other than <ESC>, <CANCEL>, <EXIT>, <CTRL><C>,
 #. <CTRL><G> or <CTRL><\>).
-#: src/help.c:480
+#: src/help.c:484
 #, c-format
 msgid "[ Press <SPACE> to continue or <BACKSPACE> for the previous page ] "
 msgstr "[ Appuyez <ESPACE> pour continuer ou <RetArr> pour la page précédente ] "
